k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: helm-aware
  labels:
    name: helm-aware
    app: helm-aware
