k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: helm-aware
  namespace: helm-aware
  labels:
    app: helm-aware
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 5000
    protocol: TCP
    name: http
  selector:
    app: helm-aware
