k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: helm-aware-ingress
  namespace: helm-aware
  labels:
    app: helm-aware
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    external-dns.alpha.kubernetes.io/target: "alljedis.justdied.com"
spec:
  tls:
    - hosts: helm-aware.sith.network
  rules:
  - host: helm-aware.sith.network
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: helm-aware
            port:
              number: 80
